css/general.css
/* CSS */

/*Colours*/

/* General */

* {
    margin: 0;
    padding: 0;
}

*,
*:after,
*::before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
    margin: 0;
    padding: 0;
}

::selection {
	background-color: rgba(77, 87, 96, .1);
}

.flex-img {
    display: block;
    width: 100%;
    margin: 0 auto;
}

html {font-size: 1em; width: 100%;}

body {
    background-color: white;
    background-size: 100%; 
    font-family: 'Montserrat', sans-serif;
    line-height: 1.35;
    color: #fa423d;
    letter-spacing: 0.125em;
    width: 100%;
}

/* Typography */

p {margin-bottom: 1.3em;}

h1, h2, h3, h4 {
  margin: 1.414em 0 0.5em;
  font-weight: inherit;
  line-height: 1.2;
}

h1, .uno {
  margin-top: 6em;
  font-size: 3.157em;
}

h2, .dos {font-size: 2.369em;}

h3, .tres {font-size: 1.777em;}

h4, .cuatro {font-size: 1.333em;}

small, .font_small {font-size: 0.75em;}

a {
    color: inherit;
}

ul {
    list-style-type: none;
}

.display-block {
    display: block;
}

#intro {
    position: relative;
    height: 100vh;
}

/* Meet Dani Pieces */

.logo-side {
    height: 3.750em;
    position: fixed;
    z-index: 0;
    width: 3.625em;
}

.lp-l {
    left: 1.56255em;
    bottom: 1.56255em;
}

.lp-r {
    right: 1.56255em;
    top: 1.56255em;
}

@media only screen and (min-width: 35em) {

    .logo-side {
        height: 7.438em;
        width: 7.188em;
    }

    .lp-l {
        left: 3.125em;
        bottom: 3.125em;
    }

    .lp-r {
        right: 3.125em;
        top: 3.125em;
    }
    
}

.logo-piece {
    height: 0.688em;
    position: absolute;
    width: 0.688em;
    -webkit-transition: -webkit-transform 400s, opacity 0.2s;
	-moz-transition: -moz-transform 400ms, opacity 0.2s;
	transition: transform 400ms, opacity 0.2s;
    -webkit-transform: rotateX(0);
	-moz-transform: rotateX(0);
	transform: rotateX(0);
    z-index: 9000;
}

.logo-piece:hover {
    -webkit-transform: rotateX(180deg);
	-moz-transform: rotateX(180deg);
	transform: rotateX(180deg);
}

.lp-pushtop-1 {
    top: 1.438em;
}

.lp-pushtop-2 {
    top: 2.875em;
}

.lp-pushleft-1 {
    left: 1.438em;
}

.lp-pushleft-2 {
    left: 2.875em;
}

@media only screen and (min-width: 35em) {

    .logo-piece {
        height: 1.375em;
        width: 1.375em;
    }
    
    .lp-l {
        left: 3.125em;
        bottom: 3.125em;
    }

    .lp-r {
        right: 3.125em;
        top: 3.125em;
    }
    
    .lp-pushtop-1 {
        top: 2.875em;
    }

    .lp-pushtop-2 {
        top: 5.750em;
    }

    .lp-pushleft-1 {
        left: 2.875em;
    }

    .lp-pushleft-2 {
        left: 5.750em;
    }
}

/* Navigations */

.nav {
    position: fixed;
    z-index: 9000;
}

.nav li {
    margin-bottom: 0.325em;
}

.nav li a {
    position: relative;
    text-decoration: none;
    font-size: 0.85em
}

.nav li a::before,
.nav li a::after {
	display: inline-block;
	opacity: 0;
	-webkit-transition: -webkit-transform 400s, opacity 0.2s;
	-moz-transition: -moz-transform 400ms, opacity 0.2s;
	transition: transform 400ms, opacity 0.2s;
}

.nav li a::before {
	margin-right: 0.625em;
	content: '[';
	-webkit-transform: translateX(1.250em);
	-moz-transform: translateX(1.250em);
	transform: translateX(1.250em);
}

.nav li a::after {
	margin-left: 0.625em;
	content: ']';
	-webkit-transform: translateX(-1.250em);
	-moz-transform: translateX(-1.250em);
	transform: translateX(-1.250em);
}

.nav li a:hover::before,
.nav li a:hover::after,
.nav li a:focus::before,
.nav li a:focus::after {
	opacity: 1;
	-webkit-transform: translateX(0px);
	-moz-transform: translateX(0px);
	transform: translateX(0px);
}

.nav li:nth-child(1){ -webkit-animation-delay: 700ms }
.nav li:nth-child(2){ -webkit-animation-delay: 780ms }
.nav li:nth-child(3){ -webkit-animation-delay: 860ms }

.social-nav {
    top: 1.56255em;
    left: .9375em;
}

.inside-nav {
    text-align: right;
    right: .9375em;
    bottom: 1.5625em;
}

.social-nav li {
    opacity: 0;
    -webkit-animation: slide-in-left 500ms cubic-bezier(.6,.39,.59,.85) forwards;
	animation: slide-in-left 500ms cubic-bezier(.6,.39,.59,.85) forwards;
}

.inside-nav li {
    opacity: 0;
    -webkit-animation: slide-in-right 500ms cubic-bezier(.6,.39,.59,.85) forwards;
	animation: slide-in-right 500ms cubic-bezier(.6,.39,.59,.85) forwards;
}

@media only screen and (min-width: 35em) {
    
    .nav li a {
        font-size: 1em;
    }
    
    .nav li {
        margin-bottom: 0.625em;
    }
    
    .inside-nav {
        right: 1.875em;
        bottom: 3.125em;
    }
    
    .social-nav {
        top: 3.125em;
        left: 1.875em;
    }
    
}

@-webkit-keyframes slide-in-left {
	0% {
		opacity: 0;
        margin-left: -12.500em;
	}
    
	100% {
		opacity: 1;
        margin-left: 0em;
	}
}

@-webkit-keyframes slide-in-right {
	0% {
		opacity: 0;
        margin-right: -12.500em;
	}
    
	100% {
		opacity: 1;
        margin-right: 0em;
	}
}

/* Nav color switches 

.fixed {
    position: fixed;
}

.midnightHeader.default {
    color: #fa423d;
}

.midnightHeader.color-1 {
    color: #f39c12;
}*/

/* Hola */

.hola {
    width: 28.125em; 
    margin: 0 auto;
    margin-top: 17em;
    -webkit-animation: fade-in 700ms cubic-bezier(.6,.39,.59,.85);
	animation: fade-in 700ms cubic-bezier(.6,.39,.59,.85);
    display: none;
}

.content {
    text-align: center;
    height: 100%;
}

.hola-p {
    -webkit-animation: fade-in-2 700ms cubic-bezier(.6,.39,.59,.85);
	animation: fade-in-2 700ms cubic-bezier(.6,.39,.59,.85);
    -wekbit-animation-delay: 100ms;
    animation-delay: 100ms;
    display: block;
    letter-spacing: 0.125rem;
}

@media only screen and (min-width: 35em) {
    .hola {
        display: block;
    }
    
    .holahola {
        display: none;
    }
    
    .hola-p {
        display: block;
        opacity: 1;
    }
}

@-webkit-keyframes fade-in {
	0% {
		opacity: 0;
        width: 0em;
	}
	
	100% {
		opacity: 1;
        width: 28.125em;
	}
}

@keyframes fade-in {
	0% {
		opacity: 0;
        width: 0em;
	}
	
	100% {
		opacity: 1;
        width: 28.125em;
	}
}

@-webkit-keyframes fade-in-2 {
	0% {
		opacity: 0;
	}
	
	100% {
		opacity: 1;
	}
}

/* About me */

#about {
    height: 100vh;
    padding: 1.56255em
}

#about p {
    width: 100%;
    margin: 0 auto;
    font-size: 1.65rem;
    letter-spacing: 0.125rem;
}

@media only screen and (min-width: 35em) {
    
    #about p {
        height: 100vh;
        font-size: 2.369rem;
        padding: 0 1.56255em;
    }  

}

/* Work */

.portfolio-piece {
	position: relative;
	overflow: hidden;
}

.portfolio-info {
	position: absolute;
	bottom: 0;
	left:0;
	right: 0;
	text-align: center;
	background-color: transparent;
	height: 100%;
	padding: 7em 2em 0;
	color: #fff;
	top: 100%;
	-webkit-transition: all 380ms ease-in-out;
    -moz-transition: all 380ms ease-in-out;
    -o-transition: all 380ms ease-in-out;
    -ms-transition: all 380ms ease-in-out;
    transition: all 380ms ease-in-out;
}

@media only screen and (min-width: 35em) {

.portfolio-piece:hover .portfolio-info {
	top: 0;
}
    
}

/* Contact */

.contact {
    background: transparent url(../images/Dani_2.jpg) no-repeat bottom center;
    background-size: contain;
    height: 100vh;
    position: relative;
}

.contact-p {
    text-align: center;
    position: absolute;
    top: 15%;
    width: 100%;
    font-size: 1.85em;
}

@media only screen and (min-width: 35em) {
    
    .contact-p {
        font-size: 3.157em;
    }
    
}

